--- a/app/src/main/res/layout/user_home_details.xml
+++ b/app/src/main/res/layout/user_home_details.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_gravity="left"
-        android:paddingTop="15dp" />
+        android:paddingTop="15dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"/>
 
     <TextView
         android:id="@+id/verticalUserName"
