--- a/app/src/main/res/layout/user_profil_details.xml
+++ b/app/src/main/res/layout/user_profil_details.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <FrameLayout
+    <RelativeLayout
+        android:id="@+id/relativeLay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
+        android:layout_height="410dp">
         <ImageView
             android:id="@+id/verticalImage"
             android:layout_width="match_parent"
@@ -19,11 +19,10 @@
             android:id="@+id/logo"
             android:layout_width="60dp"
             android:layout_height="50dp"
-            android:paddingTop="50dp" />
-
-
-    </FrameLayout>
-
+            app:civ_circle_background_color="#04D4F0"
+            app:civ_border_width="4dp"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
     <TextView
         android:id="@+id/verticalUserName"
         android:layout_width="wrap_content"
